improve readme file

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </div>
 
 <div class="w3-container" >
-  <p>As you can see, even total number of crimes is not decreased last years, there are definitily decrease for the cases with arrests. It means that there are less heavy crimes from year to year and it is positive trend for sure.</p>
+  <p>As you can see, even total number of crimes is not decreased last years, there is definitily decrease for the cases with arrests. It means that there are less heavy crimes from year to year and it is positive trend for sure.</p>
   <p>If you are interested in details, you can use below chart in order to understand how much of total value particular crime type brings</p>
 </div>
 
